tests/baselines/reference/unusedTypeParameters_infer.errors.txt
unusedTypeParameters_infer.ts(1,43): error TS6133: 'U' is declared but its value is never read.


==== unusedTypeParameters_infer.ts (1 errors) ====
    type LengthCheck<T> = T extends ArrayLike<infer U> ? number : never;
                                              ~~~~~~~
!!! error TS6133: 'U' is declared but its value is never read.
    